# CodeClash

./: .env.example  .gitignore  404.html  CNAME  CONTRIBUTING.md  README.md  build_static_and_push.sh  freeze_viewer.py  index.html  main.py  main_single_player.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.cursor/rules/: style.mdc  viewer.mdc
.github/: mlc_config.json
.github/workflows/: check-links.yaml  pytest.yaml
SECURITY/: index.html
_footer/: index.html
codeclash/: constants.py
codeclash/agents/: __init__.py  abstract.py  dummy.py  minisweagent.py  player.py  simple.py  utils.py
codeclash/analysis/: matrix.py
codeclash/arenas/: __init__.py  arena.py
codeclash/utils/: aws.py  (+5 more)
codegames/: constants.py
configs/: battlecode.yaml  battlesnake.yaml  battlesnake_single_player.yaml  corewar.yaml  generate_confs.py  model_configs.yaml  models.yaml  robocode.yaml  robotrumble.yaml  tracker.json
docker/: BattleCode.Dockerfile  BattleSnake.Dockerfile  CoreWar.Dockerfile  Halite-II.Dockerfile  Halite-III.Dockerfile  Halite.Dockerfile  HuskyBench.Dockerfile  RoboCode.Dockerfile  RobotRumble.Dockerfile
docs/: index.md
environments/robotrumble_prime/: README.md  ladder_runner.py  prime_pytest_plugin.py  pyproject.toml  robotrumble_prime.py  robotrumble_prime_canonical.py
quickstart/: index.html
reference/: index.html
scripts/: batch_submit.py  benchmark_robotrumble_groq.py  build_static_and_push.sh  freeze_viewer.py  zip_results_copy_metadata.py
search/: search_index.json
tests/: test_integration.py  test_robotrumble_prime_contract.py
(+674 files in other folders)
